--- a/past/index.html
+++ b/past/index.html
@@ -1,10 +1,10 @@
 ---
 layout: page
-title: My Research
+title: Past
 background: '/img/bg-research-par.jpg'
 ---
 
-<p>Here you can find a list of the projects which I have been leading. Enjoy the reading!</p>
+<p>Here you can find the past microexcursions. Give it a look to gain some inspiration or just because you are curious. Enjoy the reading!</p>
 
 {% for post in site.posts %}
 {%- if post.category == "past" -%}
