added Swiss images

--- a/past/index.html
+++ b/past/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Past
-background: '/img/bg-research-par.jpg'
+background: '/img/bg-past.jpeg'
 ---
 
 <p>Here you can find the past microexcursions. Give it a look to gain some inspiration or just because you are curious. Enjoy the reading!</p>
