--- a/upcoming/index.html
+++ b/upcoming/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Upcoming
-background: '/img/bg-research-par.jpg'
+background: '/img/bg-upcoming.jpeg'
 ---
 
 <p>Here you can find a list of the projects which I have been leading. Enjoy the reading!</p>
