--- a/past/index.html
+++ b/past/index.html
@@ -4,7 +4,7 @@ title: Past
 background: '/img/bg-past.jpeg'
 ---
 
-<p>Here you can find the past microexcursions. Give it a look to gain some inspiration or just because you are curious. Enjoy the reading!</p>
+<p>Here you will find the past microadventures. Take a look to get inspired or just because you are curious. Have fun reading!</p>
 
 {% for post in site.posts %}
 {%- if post.category == "past" -%}
