--- a/upcoming/index.html
+++ b/upcoming/index.html
@@ -4,7 +4,7 @@ title: Upcoming
 background: '/img/bg-upcoming.jpeg'
 ---
 
-<p>Here you can find a list of the projects which I have been leading. Enjoy the reading!</p>
+<p>Here you can find all upcoming microadventures.</p>
 
 {% for post in site.posts %}
 {%- if post.category == "future" -%}
